--- a/rhubarb/rhubarb-audio/Cargo.toml
+++ b/rhubarb/rhubarb-audio/Cargo.toml
@@ -4,10 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+byteorder = "1.4.3"
+derivative = "2.2.0"
 dyn-clone = "1.0.10"
 log = "0.4.17"
+once_cell = "1.17.0"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
+demonstrate = "0.4.5"
 rstest = "0.15.0"
+rstest_reuse = "0.4.0"
 speculoos = "0.10.0"
