--- a/rhubarb/rhubarb-audio/Cargo.toml
+++ b/rhubarb/rhubarb-audio/Cargo.toml
@@ -13,6 +13,7 @@ once_cell = "1.17.0"
 [dev-dependencies]
 assert_matches = "1.5.0"
 demonstrate = "0.4.5"
+num = "0.4.0"
 rstest = "0.15.0"
 rstest_reuse = "0.4.0"
 speculoos = "0.10.0"
