wip: an initial support for ogg/opus decoder

--- a/rhubarb/CMakeLists.txt
+++ b/rhubarb/CMakeLists.txt
@@ -277,6 +277,38 @@ target_link_libraries(vorbis
 target_compile_options(vorbis PRIVATE ${disableWarningsFlags})
 set_target_properties(vorbis PROPERTIES FOLDER lib)
 
+# ... opus
+FetchContent_Declare(opus
+	GIT_REPOSITORY https://github.com/xiph/opus.git
+        GIT_TAG v1.5.2
+)
+set(OPUS_BUILD_SHARED_LIBRARY OFF)
+set(OPUS_BUILD_TESTING OFF)
+set(OPUS_BUILD_PROGRAMS OFF)
+set(OPUS_CUSTOM_MODES ON)
+message(STATUS "Fetching opus library...")
+FetchContent_MakeAvailable(opus)
+message(STATUS "Fetching opus library... done.")
+include_directories(SYSTEM "${opus_SOURCE_DIR}/include")
+
+# ... opusfile
+add_library(opusfile
+	lib/opusfile-0.12/include/opusfile.h
+        lib/opusfile-0.12/src/winerrno.h
+        lib/opusfile-0.12/src/internal.h
+        lib/opusfile-0.12/src/http.c
+        lib/opusfile-0.12/src/wincerts.c
+        lib/opusfile-0.12/src/opusfile.c
+        lib/opusfile-0.12/src/internal.c
+        lib/opusfile-0.12/src/info.c
+        lib/opusfile-0.12/src/stream.c
+)
+target_include_directories(opusfile SYSTEM PUBLIC "lib/opusfile-0.12/include")
+target_compile_options(opusfile PRIVATE ${disableWarningsFlags})
+target_link_libraries(opusfile PRIVATE opus)
+set_target_properties(opusfile PROPERTIES FOLDER lib)
+
+
 # Define Rhubarb libraries
 
 include_directories("src")
@@ -323,6 +355,8 @@ add_library(rhubarb-audio
 	src/audio/ioTools.h
 	src/audio/OggVorbisFileReader.cpp
 	src/audio/OggVorbisFileReader.h
+	src/audio/OggOpusFileReader.cpp
+	src/audio/OggOpusFileReader.h
 	src/audio/processing.cpp
 	src/audio/processing.h
 	src/audio/SampleRateConverter.cpp
@@ -338,6 +372,7 @@ target_include_directories(rhubarb-audio PRIVATE "src/audio")
 target_link_libraries(rhubarb-audio
 	webRtc
 	vorbis
+	opusfile
 	rhubarb-logging
 	rhubarb-time
 	rhubarb-tools
