--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{yml,yaml}]
+[*.{jsx,yml,yaml}]
 indent_style = space
 indent_size = 2
